# rpg-ecs

./: Makefile.toml  README.md  shell.nix
game/: export_presets.cfg  project.godot
game/assets/Shadows/: LargeShadow.png.import
game/assets/World/: CliffTileset.png.import
game/components/: Acceleration.gd  Acceleration.gdns  Acceleration.tscn  Damage.gd  Damage.tscn  Friction.gd  Friction.gdns  Friction.tscn  Roll.gd  Roll.gdns  Roll.tscn  Stats.gd  Stats.gdns  Stats.tscn
game/native/: game.gdnlib
game/scenes/: WanderController.gdns  WanderController.tscn  World.gd  World.gdns  World.tscn
game/scenes/delect_box/: Hitbox.gdns  Hitbox.tscn  Hurtbox.gdns  Hurtbox.tscn  SoftCollision.gdns  SoftCollision.tscn
game/scenes/effect/: Effect.gd  Effect.gdns  EnemyDeathEffect.tscn  GrassEffect.tscn  HitEffect.tscn
game/scenes/enemies/: Bat.gd  Bat.gdns  Bat.tscn  PlayerDelectionZone.tscn
game/scenes/player/: Player.gd  Player.gdns  Player.tres  Player.tscn
game/scenes/ui/: HealthUI.gdns  HealthUI.tscn
game/scenes/world/: Bush.tscn  Grass.gd  Grass.gdns  Grass.tscn  Tree.tscn
rust/: Cargo.toml
rust/src/: app.rs  components.rs  ecs_controller.rs  engine_sync.rs  events.rs  lib.rs  plugins.rs
rust/src/delect_box/: hit_box.rs  hurt_box.rs  mod.rs  soft_collision.rs
rust/src/effect/: grass_effect.rs  mod.rs
rust/src/enemy/: bat.rs  mod.rs  wander_controller.rs
rust/src/engine_sync/: events.rs  systems.rs
rust/src/player/: mod.rs  player.rs
rust/src/world/: grass.rs  health.rs  mod.rs  world.rs
